# pq-rerand

./: .gitignore  README.md
rust_implem/: Cargo.toml
rust_implem/benches/: bench.rs
rust_implem/src/: decrypt.rs  encoding.rs  encrypt.rs  keygen.rs  lib.rs  ntt.rs  params.rs  poly.rs  rerandomize.rs  sampling.rs  serialize.rs
rust_implem/tests/: correctness.rs
tools/: lattice_estimate_sage.py  make_figures.py  security_estimate.py
